<resources>
    <string name="app_name">ルーレット</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>

    <string name="action_settings">Settings</string>
    <string name="hint_word">Word…</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="add_word">Add word</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="roulette_create">ルーレット作成</string>
    <string name="edit_roulette">ルーレット編集</string>
    <string name="myRoulette">Myルーレット</string>
    <string name="edit_myRoulette">Myルーレット編集</string>
    <string name="sound_option">サウンド</string>
    <string name="roulette_time">止まるまでの時間</string>
    <string name="roulette_time_short">短め</string>
    <string name="roulette_time_normal">普通</string>
    <string name="roulette_time_long">長め</string>
    <string name="more_action">moreAction</string>
    <string name="page_explain">画面説明</string>
    <string name="tutorial">チュートリアル</string>
    <string name="roulette_split">分割</string>
    <string name="item_name_hint">項目名</string>
    <string name="create_finish">作成</string>
    <string name="roulette_create_finish">完了</string>
    <string name="hint_roulette_name">ルーレット名</string>
    <string name="add_item">＋ 追加</string>
    <string name="hide_cheat">隠す</string>
    <string name="notice_item_is_max">これ以上追加できません</string>
    <string name="notify_cannot_split">これ以上分割できません</string>
    <string name="light_theme">ライト</string>
    <string name="dark_theme">ダーク</string>
    <string name="saved_sound_state_key">sonud_state</string>
    <string name="saved_time_short_state_key">time_short_state</string>
    <string name="saved_time_normal_state_key">time_normal_state</string>
    <string name="saved_time_long_state_key">time_long_state</string>
    <string name="saved_theme_save_state_key">theme_save_state</string>
    <string name="saved_theme_state_key">theme_state</string>
    <string name="saved_theme_changed_manually_key">theme_changed_manually</string>
    <string name="saved_roulette_key">saved_roulette</string>
    <string name="saved_roulette_exist_key">saved_roulette_exist</string>
    <string name="saved_cheat_flag_state_key">cheat_flag_state</string>
    <string name="roulette_create_tutorial_id">roulette_create_tutorial</string>
    <string name="roulette_create_continuation_tutorial_id">roulette_create_continuation_tutorial</string>
    <string name="saved_roulette_create_first_tutorial_done_key">saved_roulette_create_first_tutorial_done</string>
    <string name="tutorial_skip_text">Finish</string>
    <string name="edit_roulette_tutorial_id">edit_roulette_tutorial</string>
    <string name="saved_edit_roulette_first_tutorial_done_key">saved_edit_roulette_first_tutorial_done</string>
    <string name="saved_edit_myRoulette_first_tutorial_done_key">saved_edit_myRoulette_first_tutorial_done</string>
    <string name="edit_myRoulette_tutorial_id">edit_myRoulette_tutorial</string>
    <string name="saved_myRoulette_first_tutorial_done_key">saved_myRoulette_first_tutorial_done</string>
    <string name="myRoulette_tutorial_id">myRoulette_tutorial</string>
    <string name="saved_main_first_tutorial_done_key">saved_main_first_tutorial_done</string>
    <string name="main_tutorial_id">main_tutorial</string>
    <string name="roulette_create_start_tutorial_id">roulette_create_start_tutorial</string>
    <string name="roulette_create_latter_tutorial_id">roulette_create_latter_tutorial</string>
    <string name="theme">テーマ</string>
    <string name="fixed_theme">テーマを固定</string>
    <string name="detail_settings">詳細な設定</string>
    <string name="saved_tutorial_appear_key">saved_tutorial_appear</string>
    <string name="tutorial_appear">ルーレット作成チュートリアルを表示する</string>
    <string name="saved_notification_key">saved_notification</string>
    <string name="notification">抽選モード変更時に通知をする</string>
    <string name="saved_appear_alert_delete_myRoulette_key">saved_appear_alert_delete_myRoulette</string>
    <string name="appear_alert_delete_myRoulette">Myルーレット削除時に確認をする</string>
    <string name="saved_auto_save_created_roulette_key">saved_auto_save_created_roulette</string>
    <string name="auto_save_created_roulette">作成したルーレットを自動保存する</string>
    <string name="notificatoin_myRoulettes_are_max">保存可能個数の上限を超えているため保存できません。Myルーレットを削除してください。</string>
    <string name="review_app">評価する</string>
    <string name="licenses">ライセンス</string>
    <string name="roulette_create_first_tutorial_id">roulette_create_first_tutorial</string>
    <string name="saved_count_of_app_open_key">saved_count_of_app_open</string>
    <string name="saved_dialog_never_invoke_key">saved_dialog_never_invoke</string>
    <string name="saved_high_speed_mode_key">saved_high_speed_mode</string>
    <string name="high_speed_mode">高速抽選モード</string>
    <string name="main_first_tutorial_id">main_first_tutorial</string>
    <string name="msg_not_roulette_exists">ルーレットが作成されていません</string>
    <string name="toolbar_title_when_roulette_name_undefined">ルーレット</string>
    <string name="tutorial_msg_main_menu_button">タップするとメニューが開き、各種設定を行うことができます。</string>
    <string name="tutorial_msg_main_activity_fab"><![CDATA[タップするとボタンメニューが出現します。<br><br> タップしてみましょう。]]></string>
    <string name="tutorial_msg_start_tutorial">チュートリアルを開始します。</string>
    <string name="tutorial_msg_to_roulette_create_fab">押すとルーレット作成画面に移動します。移動先ではルーレットの作成、保存をすることができます。</string>
    <string name="tutorial_msg_to_edit_roulette">押すとルーレット編集画面に移動します。現在セットしてあるルーレットの編集を行うことができます。</string>
    <string name="tutorial_msg_to_my_roulette"><![CDATA[押すと保存済みのルーレットを見ることができます。また、保存済みルーレットを編集することもできます。<br><br>以上でこの画面のチュートリアルを終了します。]]></string>
    <string name="confirm_msg_start_tutorial">チュートリアルを開始しますか？</string>
    <string name="alert_dialog_positive_choice">YES</string>
    <string name="alert_dialog_negative_choice">CANCEL</string>
    <string name="tutorial_msg_split_button"><![CDATA[＋：押すとルーレットを分割します。<br><br>−：押すと分割前に戻します。]]></string>
    <string name="tutorial_msg_roulette_start_button"><![CDATA[タップするとセットしてあるルーレットが回転し始めます。回転はしばらくすると勝手に止まります。<br><br>以上でチュートリアルを終了します。]]></string>
    <string name="tutorial_msg_switch_cheating_area">この部分をタップすることで、イカサマ設定のON、OFFを切り替えることができます。イカサマがバレそうになった時に使ってみましょう。\n\nイカサマ設定が切り替わるとそのことを端末に通知します。</string>
    <string name="tag_rating_dialog_fragment">ratingDialog</string>
    <string name="alert_content_msg_roulette_has_problem">"ルーレット内容が不正です。"</string>
    <string name="alert_content_msg_both_switch_are_true">必中スイッチと絶対ハズレスイッチがどちらONになっています。\nどちらかをOFFにしてください。</string>
    <string name="alert_content_msg_all_switch0_are_true">全ての絶対ハズレスイッチをONにすることはできません。\nどれかをOFFにしてください。</string>
    <string name="alert_content_msg_ratio_has_problem">面積比の値が不正です。\n1~99の値を入れてください。</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="tutorial_msg_role_of_edit_my_roulette">ここでは選択したMyルーレットの編集を行うことができます。\n\n基本的な操作は「ルーレット作成」と同じです。詳しい操作は「ルーレット作成」をご覧ください。</string>
    <string name="tutorial_msg_edit_my_roulette_finish_create_fab"><![CDATA[ここでルーレットの編集を完了します。<br>完了後は、選択したMyルーレットに編集内容が反映されます。<br><br>以上でこの画面のチュートリアルを終了します。]]></string>
    <string name="tag_color_pick_dialog_fragment">colorPickDialog</string>
    <string name="confirm_msg_save_to_my_roulette">Myルーレットに保存しますか？</string>
    <string name="tutorial_msg_role_of_edit_roulette">ここではセットしてあるルーレットの編集を行うことができます。\n\n基本的な操作は「ルーレット作成」と同じです。詳しい操作は「ルーレット作成」をご覧ください。</string>
    <string name="utorial_msg_edit_roulette_finish_create_fab"><![CDATA[ここでルーレットの編集を完了します。<br>完了後は、編集内容が反映されたルーレットがセットされます。<br><br>以上でこの画面のチュートリアルを終了します。]]></string>
    <string name="confirm_msg_delete_my_roulette">削除してもよろしいですか？</string>
    <string name="tutorial_msg_role_of_my_roulette">ここでは保存したルーレットの一覧を見ることができます。\n\n作成したルーレットを保存するには、ルーレット作成完了時の「Myルーレットに保存しますか？」にて「YES」をタップしてください。</string>
    <string name="tutorial_msg_position_of_my_roulette">Myルーレットの名前が表示されます。</string>
    <string name="tutorial_msg_edit_my_roulette_button">タップするとMyルーレットを編集をすることができます。</string>
    <string name="tutorial_msg_delete_my_roulette_button">タップするとMyルーレットを削除することができます。スワイプでも削除が可能です。</string>
    <string name="tutorial_msg_how_to_set_my_roulette"><![CDATA[タップすることで選択されたMyルーレットがセットされます。<br><br>以上でこの画面のチュートリアルを終了します。]]></string>
    <string name="tutorial_msg_add_roulette_item_button"><![CDATA[ここでルーレットの項目を１つずつ追加できます。<br><br>タップして追加してみましょう。]]></string>
    <string name="tutorial_msg_cheat_button"><![CDATA[イカサマをするには、この隠しボタンを押す必要があります。<br><br>タップしてみましょう。]]></string>
    <string name="tutorial_msg_roulette_name">ここで、作成するルーレットに名前を付けることができます。</string>
    <string name="tutorial_msg_color_picker">タップすると、ルーレット項目の色を自由に選択できます。</string>
    <string name="tutorial_msg_roulette_item_name">ここでルーレット項目名を設定できます。</string>
    <string name="tutorial_msg_item_ratio">ルーレット項目の面積比を、1~99の数値で設定できます。</string>
    <string name="tutorial_msg_delete_item_button">タップするとルーレット項目を削除できます。スワイプでも削除が可能です。</string>
    <string name="tutorial_msg_role_of_cheat_switches"><![CDATA[イカサマメニューが出現しました。<br><br>必中スイッチ：この項目が<b>絶対に当たります</b>。<br><br>絶対ハズレスイッチ：この項目が<b>絶対に当たらなくなります</b>。<br><br>ここの設定をしなかった場合は通常の抽選を行います。<br><br>どちらかのスイッチをONにしてみましょう。]]></string>
    <string name="tutorial_msg_hide_cheat_switches">もう一度押すと、イカサマメニューを隠すことができます。</string>
    <string name="tutorial_msg_finish_roulette_create_tutorial"><![CDATA[ここでルーレットの作成を完了します。<br><br>チュートリアルは右上のアイコンからいつでも見ることができます。]]></string>
    <string name="tutorial_msg_alert_of_start_roulette_create_tutorial">開始すると現在の編集内容は破棄されます。</string>
    <string name="tutorial_msg_role_of_roulette_create">ここではルーレットの作成を行うことができます。</string>
    <string name="title_color_pick_dialog_fragment">色の選択</string>
    <string name="url_this_app_google_play_page">https://play.google.com/store/apps/details?id=com.kasai.cheatroulette</string>
    <string name="package_com_android_vending">com.android.vending</string>
    <string name="rating_alert_dialog_positive_choice">評価する</string>
    <string name="rating_alert_dialog_neutral_choice">今後表示しない</string>
    <string name="rating_alert_dialog_negative_choice">あとでする</string>
    <string name="string_of_my_roulette_name_not_be_Defined">未設定</string>
    <string name="cheat_notification_msg_cheat_mode_is_on">イカサマモードON</string>
    <string name="cheat_notification_msg_cheat_mode_is_off">イカサマモードOFF</string>
    <string name="cheat_notification_title">変更通知</string>
    <string name="exception_msg_unsupported_drawable_type">Unsupported drawable type</string>
    <string name="prop_name_my_roulette_create_date">作成日：</string>
    <string name="rating_alert_dilog_ask_rating_statement">いつもご利用ありがとうございます。\nよろしければ、このアプリの評価を頂けませんでしょうか。</string>
    <string name="prop_name_roulettte_item_ratio">面積比：</string>
    <string name="prop_name_roulette_item_switch100">必中\nスイッチ</string>
    <string name="prop_name_roulette_item_switch0">絶対ハズレ\nスイッチ</string>
    <string name="drawer_menu_title_setting">設定</string>
    <string name="drawer_menu_title_activities">アクティビティ</string>
    <string name="drawer_menu_title_others">その他</string>
    <string name="toolbar_menu_main_title">メニュー</string>
    <string name="date_format_of_my_roulette">yyyy/MM/dd</string>
    <string name="name_my_roulette_database">myRoulette_database</string>
    <string name="preference_fragment_title">詳細設定</string>
    <string name="roulette_preview">プレビュー</string>
    <string name="tilte_of_roulette_preview_dialog">完成図プレビュー</string>


</resources>