<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar_roulette_create"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--listviewのほうがいいかも-->

    <EditText
        android:id="@+id/rouletteName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/hint_roulette_name"
        android:gravity="center_horizontal"
        android:maxLines="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_roulette_create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.037" />

    <Button
        android:id="@+id/item_add_button"
        android:layout_width="77dp"
        android:layout_height="38dp"
        android:layout_margin="28dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/add_item"
        app:layout_constraintTop_toBottomOf="@id/rouletteName"
        app:layout_constraintEnd_toStartOf="@+id/create_finish_button"
        app:layout_constraintStart_toEndOf="@id/cheat_button"
        app:layout_constraintBottom_toTopOf="@+id/roulette_item_list"/>

    <Button
        android:id="@+id/create_finish_button"
        android:layout_width="77dp"
        android:layout_height="38dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/create_finish"
        app:layout_constraintTop_toBottomOf="@+id/rouletteName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/roulette_item_list"/>

    <Button
        android:id="@+id/cheat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="28dp"
        android:background="#00000000"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rouletteName"
        app:layout_constraintBottom_toTopOf="@+id/roulette_item_list"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/roulette_item_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="17dp"
        android:clipToPadding="false"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_finish_button"
        tools:listitem="@layout/rouletteitemlist_item" />
    <!--
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="411dp"
        android:layout_height="556dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">


        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></LinearLayout>
    </ScrollView>
    -->


</androidx.constraintlayout.widget.ConstraintLayout>