<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout_main"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".MainActivity"
    android:fitsSystemWindows="true"
    tools:openDrawer="right">
    
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        app:headerLayout="@layout/header_drawer_menu_main"
        app:menu="@menu/drawer_menu_main"
        android:layout_gravity="right"/>

    <!--<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">


    <!--<com.e.myroulette1.RouletteView
        android:id="@+id/rouletteView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingClass" />-->

    <!--
    <com.e.myroulette1.RouletteView
        android:id="@+id/roulette"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingClass" />
        -->



    <include
        android:id="@+id/toolbar_main"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.e.myroulette1.RouletteView
        android:id="@+id/roulette"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingClass" />

    <com.e.myroulette1.PointerView
        android:id="@+id/pointerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingClass" />

    <com.e.myroulette1.PushImageButton
        android:id="@+id/rouletteStartButton"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:background="@drawable/shape"
        android:elevation="20dp"
        app:srcCompat="@drawable/ic_baseline_refresh_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="150dp"
        android:gravity="center_horizontal"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/rouletteStartButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_main" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rouletteStartButton">

        <Button
            android:id="@+id/minus_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="−" />

        <TextView
            android:id="@+id/roulette_split"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/roulette_split" />

        <Button
            android:id="@+id/plus_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="＋" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

        <jahirfiquitiva.libs.fabsmenu.FABsMenuLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:fabs_menu_clickableOverlay="true"
            app:fabs_menu_overlayColor="#99000000"
            tools:layout_behavior="@string/fabs_menu_layout_behavior">

            <!-- FABs Menu is the main view. It will contain all the items FABs and it create the menu fab itself -->
            <jahirfiquitiva.libs.fabsmenu.FABsMenu
                android:id="@+id/fabs_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:clipChildren="false"
                app:fab_expandDirection="up"
                app:fab_labelsPosition="left"
                app:fab_menuMargins="16dp"
                app:fab_menuTopMargin="32dp"
                app:fab_moreButtonBackgroundColor="#FFFF0040"
                app:fab_moreButtonPlusIcon="@drawable/ic_add_black_24dp"
                app:fab_moreButtonRippleColor="#FFFF0040"
                app:fab_moreButtonSize="normal">

                <!-- This is the item that appears at the top of the menu -->
                <jahirfiquitiva.libs.fabsmenu.TitleFAB
                    android:id="@+id/fab_roulette_create"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    app:backgroundTint="@color/colorAccent"
                    app:fabSize="normal"
                    app:fab_enableTitleClick="false"
                    app:fab_title="@string/roulette_create"
                    app:fab_title_backgroundColor="@color/colorAccent"
                    app:fab_title_textColor="@android:color/white"
                    app:rippleColor="@color/colorAccent"
                    app:srcCompat="@drawable/ic_baseline_build_24" />

                <jahirfiquitiva.libs.fabsmenu.TitleFAB
                    android:id="@+id/fab_edit_roulette"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    app:backgroundTint="@color/colorAccent"
                    app:fabSize="normal"
                    app:fab_enableTitleClick="false"
                    app:fab_title="@string/edit_roulette"
                    app:fab_title_textColor="@color/colorAccent"
                    app:rippleColor="@color/colorAccent"
                    app:srcCompat="@drawable/ic_baseline_edit_24" />


                <!-- This item will appear just above the menu FAB -->
                <jahirfiquitiva.libs.fabsmenu.TitleFAB
                    android:id="@+id/fab_myRoulette"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    app:backgroundTint="#FF00FFBF"
                    app:fabSize="normal"
                    app:fab_enableTitleClick="false"
                    app:fab_title="@string/myRoulette"
                    app:rippleColor="#FF00FFBF"
                    app:srcCompat="@drawable/ic_baseline_track_changes_24" />

            </jahirfiquitiva.libs.fabsmenu.FABsMenu>

        </jahirfiquitiva.libs.fabsmenu.FABsMenuLayout>

    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>
